--- a/package.json
+++ b/package.json
@@ -1,14 +1,27 @@
 {
   "name": "array-to-object",
-  "version": "1.0.0",
-  "description": "Converts arrays into objects",
+  "version": "1.1.0",
+  "description": "Transform two arrays into an object",
   "main": "index.js",
-  "dependencies": {},
+  "files": [
+    "LICENSE",
+    "README.md",
+    "index.js"
+  ],
   "devDependencies": {
-    "tape": "^2.13.1"
+    "is-js-object": "^1.0.0",
+    "istanbul": "^0.3.17",
+    "jscs": "^2.0.0",
+    "jshint": "^2.8.0",
+    "pre-commit": "^1.0.10",
+    "tape": "^4.0.1"
   },
   "scripts": {
-    "test": "node test"
+    "test": "istanbul cover tape test.js",
+    "check-coverage": "istanbul check-coverage --statements 100 --functions 100 --lines 100 --branches 100",
+    "open-coverage": "open coverage/lcov-report/index.html",
+    "jshint": "jshint -c .jshintrc *.js",
+    "code-style": "jscs index.js"
   },
   "repository": {
     "type": "git",
@@ -17,12 +30,19 @@
   "keywords": [
     "array",
     "object",
-    "convert"
+    "convert",
+    "transform"
   ],
   "author": "@joaquimserafim",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/joaquimserafim/array-to-object/issues"
   },
-  "homepage": "https://github.com/joaquimserafim/array-to-object"
+  "homepage": "https://github.com/joaquimserafim/array-to-object",
+  "pre-commit": [
+    "jshint",
+    "code-style",
+    "test",
+    "check-coverage"
+  ]
 }
